[gd_scene load_steps=4 format=3 uid="uid://ba2mdm8rbhqsl"]

[ext_resource type="Script" path="res://Components/ProjectileComponent.gd" id="1_rg3ns"]
[ext_resource type="Texture2D" uid="uid://r8b47gpphqtn" path="res://Units/Projectiles/wood-arrow.png" id="2_v31sa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbc84"]
radius = 1.0
height = 10.0

[node name="ProjectileComponent" type="Area2D"]
monitoring = false
script = ExtResource("1_rg3ns")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0, 0.545098, 1, 1)
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kbc84")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v31sa")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
